# Parallels

./: .gitignore  README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  gauss.out  qwerty.cpp  test.out  wingograd.out
src/Algorithms/: AbstractAlgorithm.cpp  AbstractAlgorithm.h
src/Algorithms/AntColonyAlgorithm/: AntAlgorithm.cpp  AntAlgorithm.h
src/Algorithms/Gauss/: Gauss.cpp  Gauss.h
src/Algorithms/GaussAlgorithm/: GaussAlgorithm.cpp  GaussAlgorithm.h
src/Algorithms/WinogradAlgorithm/: WinogradAlgorithm.cpp  WinogradAlgorithm.h  qwerty.cpp
src/ConsoleEngine/: AbstractConsoleEngine.h  ConsoleEngine.cpp  ConsoleEngine.h  a.out  main.cpp
src/ConsoleEngine/ConsoleForAnt/: ConsoleForAnt.cpp  ConsoleForAnt.h  main.cpp
src/ConsoleEngine/ConsoleForGauss/: ConsoleForGauss.cpp  ConsoleForGauss.h  main.cpp
src/ConsoleEngine/ConsoleForGauss/ConsoleForTestingGauss/: ConsoleForTestingGauss.cpp  ConsoleForTestingGauss.h
src/ConsoleEngine/ConsoleForWinograd/: ConsoleForWinograd.cpp  ConsoleForWinograd.h  main.cpp
src/DataStructures/Matrix/: Matrix.cpp  Matrix.h
src/Tests/: Tests.cpp
src/TextFiles/: GaussMethod1.txt  GaussMethod2.txt  GaussMethod3.txt  GaussMethod4.txt  InvalidMatrix.txt  Matrix1.txt  Matrix4.txt
src/gauss.out.dSYM/Contents/: Info.plist
src/gauss.out.dSYM/Contents/Resources/DWARF/: gauss.out
src/test.out.dSYM/Contents/Resources/DWARF/: test.out
src/wingograd.out.dSYM/Contents/: Info.plist
src/wingograd.out.dSYM/Contents/Resources/DWARF/: wingograd.out
